refactor(app): Update App to handle home component and sub components
BREAKING CHANGE: Need tests

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -64,7 +64,14 @@
   <script src="/src/client/app/app.routes.js"></script>
   <script src="/src/client/app/app.run.js"></script>
   <script src="/src/client/app/home/home.component.js"></script>
-  <script src="/src/client/app/shared/http-service/http.service.js"></script>
+  <script src="/src/client/app/shared/component-header/header.component.js"></script>
+  <script src="/src/client/app/shared/component-jumbotron/jumbotron.component.js"></script>
+  <script src="/src/client/app/shared/component-text-header/text-header.component.js"></script>
+  <script src="/src/client/app/shared/layout-full-width/full-width.component.js"></script>
+  <script src="/src/client/app/shared/layout-negate-full-width/negate-full-width.component.js"></script>
+  <script src="/src/client/app/shared/section-tutor-listings/tutor-listings.section.js"></script>
+  <script src="/src/client/app/shared/service-http/http.service.js"></script>
+  <script src="/src/client/app/shared/service-text-utils/text-utils.service.js"></script>
   <!-- endinject -->
 
   <!-- inject:templates:js -->
