--- a/src/client/index.html
+++ b/src/client/index.html
@@ -67,6 +67,8 @@
   <script src="/src/client/app/shared/component-header/header.component.js"></script>
   <script src="/src/client/app/shared/component-jumbotron/jumbotron.component.js"></script>
   <script src="/src/client/app/shared/component-text-header/text-header.component.js"></script>
+  <script src="/src/client/app/shared/component-tutor-card/tutor-card.component.js"></script>
+  <script src="/src/client/app/shared/component-tutor-lists/tutor-lists.component.js"></script>
   <script src="/src/client/app/shared/layout-full-width/full-width.component.js"></script>
   <script src="/src/client/app/shared/layout-negate-full-width/negate-full-width.component.js"></script>
   <script src="/src/client/app/shared/section-tutor-listings/tutor-listings.section.js"></script>
