--- a/src/client/index.html
+++ b/src/client/index.html
@@ -52,6 +52,7 @@
   <script src="/bower_components/toastr/toastr.js"></script>
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-iso-country-filter/dist/isoCountryFilter.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
