feat(uppercase-filter): Created a uppercase filter

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,11 +65,13 @@
   <script src="/src/client/app/app.routes.js"></script>
   <script src="/src/client/app/app.run.js"></script>
   <script src="/src/client/app/home/home.component.js"></script>
+  <script src="/src/client/app/home/home.routes.js"></script>
   <script src="/src/client/app/shared/component-header/header.component.js"></script>
   <script src="/src/client/app/shared/component-jumbotron/jumbotron.component.js"></script>
   <script src="/src/client/app/shared/component-text-header/text-header.component.js"></script>
   <script src="/src/client/app/shared/component-tutor-card/tutor-card.component.js"></script>
   <script src="/src/client/app/shared/component-tutor-lists/tutor-lists.component.js"></script>
+  <script src="/src/client/app/shared/filter-uppercase-first-letter/uppercase-first-letter.filter.js"></script>
   <script src="/src/client/app/shared/layout-full-width/full-width.component.js"></script>
   <script src="/src/client/app/shared/layout-negate-full-width/negate-full-width.component.js"></script>
   <script src="/src/client/app/shared/section-tutor-listings/tutor-listings.section.js"></script>
