feat(tutor): Added base module and configuration
Base stuff

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -61,6 +61,7 @@
   <script src="/src/client/app/app.module.js"></script>
   <script src="/src/client/app/home/home.module.js"></script>
   <script src="/src/client/app/shared/shared.module.js"></script>
+  <script src="/src/client/app/tutor/tutor.module.js"></script>
   <script src="/src/client/app/app.component.js"></script>
   <script src="/src/client/app/app.routes.js"></script>
   <script src="/src/client/app/app.run.js"></script>
@@ -77,6 +78,8 @@
   <script src="/src/client/app/shared/section-tutor-listings/tutor-listings.section.js"></script>
   <script src="/src/client/app/shared/service-http/http.service.js"></script>
   <script src="/src/client/app/shared/service-text-utils/text-utils.service.js"></script>
+  <script src="/src/client/app/tutor/tutor.component.js"></script>
+  <script src="/src/client/app/tutor/tutor.routes.js"></script>
   <!-- endinject -->
 
   <!-- inject:templates:js -->
