chore(index-html): Added libraries via wiredep

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -53,6 +53,9 @@
   <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/angular-iso-country-filter/dist/isoCountryFilter.min.js"></script>
+  <script src="/bower_components/api-check/dist/api-check.js"></script>
+  <script src="/bower_components/angular-formly/dist/formly.js"></script>
+  <script src="/bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -71,6 +74,7 @@
   <script src="/src/client/app/shared/component-avatar/avatar.service.js"></script>
   <script src="/src/client/app/shared/component-header/header.component.js"></script>
   <script src="/src/client/app/shared/component-jumbotron/jumbotron.component.js"></script>
+  <script src="/src/client/app/shared/component-signup-form/signup-form.component.js"></script>
   <script src="/src/client/app/shared/component-text-header/text-header.component.js"></script>
   <script src="/src/client/app/shared/component-tutor-card/tutor-card.component.js"></script>
   <script src="/src/client/app/shared/component-tutor-lists/tutor-lists.component.js"></script>
