--- a/src/client/index.html
+++ b/src/client/index.html
@@ -70,10 +70,12 @@
   <script src="/src/client/app/app.run.js"></script>
   <script src="/src/client/app/home/home.component.js"></script>
   <script src="/src/client/app/home/home.routes.js"></script>
+  <script src="/src/client/app/shared/button-signup/signup-button.component.js"></script>
   <script src="/src/client/app/shared/component-avatar/avatar.component.js"></script>
   <script src="/src/client/app/shared/component-avatar/avatar.service.js"></script>
   <script src="/src/client/app/shared/component-header/header.component.js"></script>
   <script src="/src/client/app/shared/component-jumbotron/jumbotron.component.js"></script>
+  <script src="/src/client/app/shared/component-modal/modal.component.js"></script>
   <script src="/src/client/app/shared/component-signup-form/signup-form.component.js"></script>
   <script src="/src/client/app/shared/component-text-header/text-header.component.js"></script>
   <script src="/src/client/app/shared/component-tutor-card/tutor-card.component.js"></script>
